--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+
+
 android {
     compileSdkVersion 33
     buildToolsVersion "30.0.3"
@@ -16,26 +18,51 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+
+
     buildFeatures {
         dataBinding true
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
+
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    signingConfigs {
+        release {
+          /*  keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']*/
+        }
+    }
+
+
+    buildTypes {
+        release {
+             minifyEnabled false
+            //signingConfigs signingConfigs.release
+           // useProguard true     // Remove unused codes
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+
 
     configurations.all {
         resolutionStrategy {
             force 'androidx.core:core-ktx:1.6.0'
         }
     }
+
+
+    lintOptions {
+        checkReleaseBuilds false
+    }
+
 }
 
 allprojects {
