solved ref issue by Keshav Savita 04 Oct 2023

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.my.spendright"
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 6
-        versionName "1.0.6"
+        versionCode 9
+        versionName "1.0.9"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -158,6 +158,10 @@ dependencies {
 
     implementation 'androidx.biometric:biometric:1.1.0'
 
+    implementation 'org.jsoup:jsoup:1.10.3'
+
+
+    implementation 'com.google.android.play:app-update:2.1.0'
 
 
 }
